--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@ body, html {
 }
 
 .logo {
-    background-image: url('img/logo.svg');
+    background-image: url('images/logo.svg');
     width: 100px;
     height: 100px;
     background-repeat: no-repeat;
