--- a/src/style.scss
+++ b/src/style.scss
@@ -1,15 +1,20 @@
 body, html {
     font-family: "Roboto", sans-serif;
-    background: linear-gradient(to bottom, #b6f9f9 0%,#bcf6e7 40%,#beffed 100%);
     height: 100%;
 }
 
-.logo {
-    background-image: url('images/logo.svg');
-    width: 100px;
-    height: 100px;
-    background-repeat: no-repeat;
-    background-size: contain;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .active {
